Fixed menu feature images to be visible and full height

--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -673,16 +673,19 @@ p {
 
 .feature-item {
     flex: 1;
-    height: 50%;
     position: relative;
+    overflow: hidden;
 }
 
 .feature-image {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    height: 100%;
+    width: 100%;
+}
+
+.feature-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .feature-text {
